# heimdall

./: .env.dummy  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose-prod.yml  docker-compose.dev.yml  docker-compose.dummy.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
react/: .env  build.ps1  build.sh  build_output.txt  eslint_output.txt  index.html  package-lock.json  package.json  start.ps1  start.sh  tailwind.config.js  vite.config.js
react/src/: App.jsx  index.css
react/src/components/: AppSidebar.jsx  BooleanBadge.jsx  GeneralErrorComponent.jsx  Header.jsx  Layout.jsx
src/: lib.rs  main.rs
src/capabilities/: did.rs  mod.rs
src/config/: config.rs  config_trait.rs  mod.rs  parse_from.rs
src/core/: builder.rs  core.rs  mod.rs
src/data/: migrator.rs  mod.rs
src/errors/: errors.rs  mod.rs
src/http/: builder.rs  core_router.rs  gatekeeper_router.rs  issuer_router.rs  minion_router.rs  mod.rs  openapi_router.rs  react_router.rs  vcs_router.rs  verifier_router.rs  wallet_router.rs
src/services/: mod.rs
src/setup/: app.rs  application.rs  db_migrations.rs  mod.rs
src/types/: mod.rs  role.rs
src/utils/: mod.rs
static/environment/: clearing_house_proxy.yaml  config.env  config.yaml  data_space_authority.yaml  legal_authority.yaml  legal_authority_config_xxx.yaml
vault/config/: local.json
vault/secrets/: cert.json.example  cert.pem.example  db.json  db.json.example  private_key.json.example  private_key.pem.example  public_key.json.example  public_key.pem.example  wallet.json  wallet.json.example
(+176 files in other folders)
