[package]
name = "heimdall"
version = "0.1.0"
edition = "2021"
authors = ["Rodrigo Menéndez <rodrigo.menendez@upm.es>"]

[lib]
name = "heimdall"
path = "src/lib.rs"

[[bin]]
name = "heimdall"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.203", features = ["default", "derive"] }
serde_json = { version = "1.0.117", features = ["default"] }
clap = { version = "4.4.9", features = [
    "env",
    "derive",
    "wrap_help",
    "unicode",
] }
tokio = { version = "1.35.0", features = ["full"] }
anyhow = "1.0.80"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8.8", features = ["ws"] }
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.8.0", features = ["serde", "default", "v4"] }
sea-orm = { version = "1.1.1", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio", "macros", "with-json"] }
sea-orm-migration = { version = "1.1.1" }
json_to_table = "0.12.0"
base64 = "0.22.1"
tower-http = { version = "0.6.8", features = ["trace", "cors", "fs"] }
x509-parser = "0.18.0"
async-trait = "0.1.89"
serde_norway = "0.9.42"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
rustls = { version = "0.23", features = ["ring"] }
#ymir = { path = "./../ymir" }
ymir = {git = "https://github.com/EunomiaUPM/ymir.git", tag = "v0.3.7"}